# osm_navigation

./: .gitignore  README.md
area_navigation/: CMakeLists.txt  package.xml
area_navigation/action/: AreaNavigation.action
area_navigation/include/area_navigation/: area_navigation.h  area_navigation_ros.h  structs.h
area_navigation/launch/: area_navigation.launch
area_navigation/src/: area_navigation.cpp  area_navigation_node.cpp  area_navigation_ros.cpp
corridor_navigation/: CMakeLists.txt  package.xml
corridor_navigation/action/: CorridorNavigation.action
corridor_navigation/include/corridor_navigation/: corridor_navigation.h  corridor_navigation_ros.h  structs.h
corridor_navigation/launch/: corridor_navigation.launch  dependencies.launch
corridor_navigation/src/: corridor_navigation.cpp  corridor_navigation_node.cpp  corridor_navigation_ros.cpp
door_passing/: CMakeLists.txt  package.xml
door_passing/action/: DoorPassing.action
door_passing/include/door_passing/: door_passing.h  door_passing_ros.h  structs.h
door_passing/launch/: door_passing.launch
door_passing/src/: door_passing.cpp  door_passing_node.cpp  door_passing_ros.cpp
junction_maneuvering/: CMakeLists.txt  package.xml
junction_maneuvering/action/: JunctionManeuvering.action
junction_maneuvering/include/junction_maneuvering/: junction_maneuvering.h  junction_maneuvering_ros.h  structs.h
junction_maneuvering/launch/: junction_maneuvering.launch
junction_maneuvering/src/: junction_maneuvering.cpp  junction_maneuvering_node.cpp  junction_maneuvering_ros.cpp
junction_navigation/: CMakeLists.txt  package.xml
junction_navigation/action/: JunctionNavigation.action
junction_navigation/include/junction_navigation/: junction_navigation.h  junction_navigation_ros.h  structs.h
junction_navigation/launch/: junction_navigation.launch
junction_navigation/src/: junction_navigation.cpp  junction_navigation_node.cpp  junction_navigation_ros.cpp
nav2d_operator/config/: costmap.yaml  operator.yaml
nav2d_operator/include/nav2d_operator/: RobotOperator.h
nav2d_operator/launch/: nav2d_operator.launch
nav2d_operator/src/: RobotOperator.cpp  node.cpp
osm_low_level_planner/: CMakeLists.txt  package.xml  setup.py
osm_low_level_planner/scripts/: osm_low_level_planner_node.py
osm_low_level_planner/src/osm_low_level_planner/: osm_low_level_planner_callback.py
osm_map_server/: CMakeLists.txt  package.xml  setup.py
osm_map_server/launch/: osm_map_server.launch
osm_map_server/scripts/: map_server_node.py
osm_map_server/src/osm_map_server/: get_2d_map.py  get_3d_map.py  get_map.py  load_map.py  obl_to_ros_adapter.py
osm_map_server/tests/: get_geometric_map_test.py  get_semantic_map_test.py  load_geometric_map_test.py  load_semantic_map_test.py
osm_topological_planner/: CMakeLists.txt  package.xml  setup.py
osm_topological_planner/launch/: osm_topological_planner.launch
osm_topological_planner/scripts/: osm_topological_planner_node.py
osm_topological_planner/src/osm_topological_planner/: compute_orientation.py  osm_topological_planner_callback.py
osm_topological_planner/tests/: compute_orientation_test.py
osm_trajectory_planner/: CMakeLists.txt  package.xml  setup.py
osm_trajectory_planner/action/: OSMLowLevelPlanner.action
osm_trajectory_planner/launch/: osm_low_level_planner.launch  osm_trajectory_planner.launch
osm_trajectory_planner/msg/: Waypoint.msg
osm_trajectory_planner/scripts/: osm_trajectory_planner_node.py
osm_trajectory_planner/src/osm_trajectory_planner/: osm_trajectory_planner_callback.py
room_navigation/: CMakeLists.txt  package.xml
room_navigation/action/: RoomNavigation.action
room_navigation/include/room_navigation/: room_navigation.h  room_navigation_ros.h  structs.h
room_navigation/launch/: room_navigation.launch
room_navigation/src/: room_navigation.cpp  room_navigation_node.cpp  room_navigation_ros.cpp
semantic_localization/: CMakeLists.txt  package.xml
semantic_localization/include/semantic_localization/: semantic_localization.h
semantic_localization/include/semantic_localization/map/: semantic_map.h
semantic_localization/include/semantic_localization/pf/: pf.h  pf_pdf.h  pf_vector.h
semantic_localization/include/semantic_localization/sensors/: odom.h  pillars.h  wall_sides.h
semantic_localization/launch/: semantic_localization_diff.launch  semantic_localization_omni.launch
semantic_localization/src/semantic_localization/: semantic_localization.cpp  semantic_localization_node.cpp
semantic_localization/src/semantic_localization/map/: semantic_map.c
semantic_localization/src/semantic_localization/pf/: pf.cpp  pf_kdtree.c  pf_pdf.c  pf_vector.c
semantic_localization/src/semantic_localization/sensors/: odom.cpp  pillars.cpp  sensor.cpp  wall_sides.cpp
semantic_localization/test/: ground_truth_publisher.py  record_data_for_testing.xml  semantic_localization_HBRS_C022_evaluation.xml  semantic_localization_test_HBRS_C022.rviz  semantic_localization_test_HBRS_C022.xml
smcl/: CMakeLists.txt  package.xml
smcl/include/smcl/: smcl.h
smcl/include/smcl/map/: semantic_map.h
smcl/include/smcl/pf/: pf.h  pf_kdtree.h
smcl/include/smcl/sensors/: pillars.h  sensor.h  wall_sides.h
smcl/launch/: smcl_diff.launch  smcl_omni.launch
smcl/src/smcl/: smcl.cpp  smcl_node.cpp
smcl/src/smcl/map/: semantic_map.c
smcl/src/smcl/pf/: pf.c  pf.cpp  pf_kdtree.c
smcl/src/smcl/sensors/: odom.cpp  pillars.cpp  sensor.cpp  wall_sides.cpp
smcl/test/: record_data_for_testing.xml  smcl_test_HBRS_C022.xml
symbolic_navigation/: CMakeLists.txt  package.xml
symbolic_navigation/action/: SymbolicNavigation.action
symbolic_navigation/include/symbolic_navigation/: symbolic_navigation.h  symbolic_navigation_ros.h
symbolic_navigation/launch/: symbolic_navigation.launch
symbolic_navigation/src/: symbolic_navigation.cpp  symbolic_navigation_node.cpp  symbolic_navigation_ros.cpp
symbolic_navigation/test/: symbolic_navigation_HBRS_C022_evaluation_static.xml
