<package>
    <name>semantic_localization</name>
    <version>0.1.0</version>
    <description>
        <p>
            Semantic Localization is a probabilistic localization system for a robot moving in 2D. 
        </p>
        <p>
            It uses semantic features modelled in OpenStreetMap instead of geometric features.
        </p>
    </description>
    <url></url>
    <author>Lakshadeep Naik</author>
    <author>lakshadeep.naik@gmail.com</author>
    <maintainer email="lakshadeep.naik@gmail.com">Lakshadeep Naik</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>nav_msgs</build_depend>
    <build_depend>osm_map_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>osm_map_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
</package>
